--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
             <img src="Images/header-img.png" alt="" class="">
           </div> -->
-                  <div class="col-9 header-bottom container-xl">
+                  <div class="col-9 header-bottom">
                      <p>Get started with Got-it, a fully-functioning asset-tracking demo application implementing
                         our Checklist
                         workflow. <br> It provides real-time alerts, business process triggers, and supply chain
@@ -241,19 +241,21 @@
             <!-- /how it works section -->
 
             <!-- anotger black section -->
-            <section class="list">
-               <div class="row container-xl">
-                  <ol id="blue">
-                     <li> <span>Buy a [demo kit] with our WiFi or
-                           Cellular gateway</span> </li>
-                     <li> <span> Define a new workflow or use
-                           We’ll help customise and
-                           implement it for you </span></li>
-                     <li> <span>We’ll then work with you to build
-                           connectors into your ERP system </span></li>
-                  </ol>
-               </div>
-            </section>
+            <div class="container-xl">
+               <section class="list">
+                  <div class="row ">
+                     <ol id="blue">
+                        <li> <span>Buy a [demo kit] with our WiFi or
+                              Cellular gateway</span> </li>
+                        <li> <span> Define a new workflow or use
+                              We’ll help customise and
+                              implement it for you </span></li>
+                        <li> <span>We’ll then work with you to build
+                              connectors into your ERP system </span></li>
+                     </ol>
+                  </div>
+               </section>
+            </div>
             <!-- /anotger black section -->
 
             <!-- from section -->
@@ -261,27 +263,72 @@
                <h1>Contact Us</h1>
                <form>
                   <div class="form-group">
-                    <label for="exampleInputEmail1">Company *</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                     <label for="exampleInputEmail1">Company *</label>
+                     <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputPassword1">Email Address *</label>
-                    <input type="email" class="form-control" id="exampleInputPassword1">
+                     <label for="exampleInputPassword1">Email Address *</label>
+                     <input type="email" class="form-control" id="exampleInputPassword1">
                   </div>
                   <div class="form-group">
                      <label for="exampleInputEmail1">What problem are you trying to solve *</label>
                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                   </div>
-                  
-                  <button type="submit" class="btn btn-primary"><span>SEND</span> </button>
-                </form>
+                  </div>
+                  <div class="form-flex">
+                     <button type="submit" class="btn btn-primary my"><span>SEND</span> </button>
+                     <p>If you’d prefer, email us at <span>team@reelables.com</span></p>
+                  </div>
+               </form>
             </section>
             <!-- /from section -->
          </div>
       </main>
 
+      <!-- footer -->
+      <footer>
 
+      <nav class="navbar navbar-expand-xl navbar-dark">
+         <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+               <img src="Images/logo.png" alt="" width="100" height="25">
+            </a>
 
+            <div class="collapse navbar-collapse" id="navbarNav">
+               <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                     <a class="nav-link" aria-current="page" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#">Templates</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#">Demo</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#">Integrations</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="#">Contact Us</a>
+                  </li>
+               </ul>
+               <button type="button" class="btn btn-outline-info">
+                  <span class="nav-link" href="#">Try it</span>
+               </button>
+
+            </div>
+         </div>
+      </nav>
+
+      <div class="footer-info">
+         <p>© Reelables, Inc., 2020 <br>
+            814 Mission St. 6th Fl., San Francisco, CA. 94103</p>
+         </div>
+
+   </footer>
+   <!-- /footer -->
       <!-- bootstrap -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
          integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
