--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                <div class="row align-items-center">
                   <div class="col-7">
 
-                     <div class="header-h1"> <span> business processes </span> <br>
+                     <div class="header-h1"> <span>Smart business processes </span> <br>
                         for automating supply chains and inventory management</div>
 
                      <p id="header-p">Create custom, asset tracking workflows with Bluetooth-enabled smart labels
@@ -209,13 +209,13 @@
             <!-- /black section -->
 
             <!-- how it works section -->
-            <section class="info container-xl">
+            <section class="info">
                <h1>How it works</h1>
                <div class="row">
                   <div class="col-5">
                      <img src="Images/squre.png" alt="">
                   </div>
-                  <div class="col-6">
+                  <div class="col-6 flexie">
                      <p>Provisioning takes place at the point of manufacture or distribution when inventory is
                         ordinarily barcoded.
                         Reelables are activated with an external NFC scan and associated using existing serialisation
@@ -241,9 +241,9 @@
             <!-- /how it works section -->
 
             <!-- anotger black section -->
-            <div class="container-xl">
+            <div class="container-xl" style="overflow:hidden; padding:0">
                <section class="list">
-                  <div class="row ">
+                  <div class="row list-demo-kit">
                      <ol id="blue">
                         <li> <span>Buy a [demo kit] with our WiFi or
                               Cellular gateway</span> </li>
@@ -254,12 +254,15 @@
                               connectors into your ERP system </span></li>
                      </ol>
                   </div>
+                 <div class="img">
+                  <img src="Images/tapes.png" alt="">
+                 </div>
                </section>
             </div>
             <!-- /anotger black section -->
 
             <!-- from section -->
-            <section class="forma container-xl">
+            <section class="forma ">
                <h1>Contact Us</h1>
                <form>
                   <div class="form-group">
@@ -287,7 +290,7 @@
       <!-- footer -->
       <footer>
 
-      <nav class="navbar navbar-expand-xl navbar-dark">
+      <nav class="navbar navbar-expand-xl navbar-dark container-xl">
          <div class="container-fluid">
             <a class="navbar-brand" href="#">
                <img src="Images/logo.png" alt="" width="100" height="25">
